--- a/shouBing.ioc
+++ b/shouBing.ioc
@@ -302,7 +302,8 @@ TIM6.Period=10000-1
 TIM6.Prescaler=16800-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART3.IPParameters=VirtualMode
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
